--- a/imobiliario-frontend/package.json
+++ b/imobiliario-frontend/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "start": "set PORT=3003 && react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
