--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@types/numeral": "^2.0.5",
     "better-sqlite3": "^12.2.0",
     "clsx": "^2.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^3.0.6",
+    "express": "^5.1.0",
     "framer-motion": "^10.16.16",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.303.0",
